# zns-verify

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PRAGMATISM.md  README.md  context.md
docs/: SECURITY_REVIEW_PLAN.md  THREAT_MODEL.md  code_review.md
src/: action.rs  chain.rs  commit.rs  commitment.rs  decrypt.rs  hash.rs  lib.rs  memo.rs  proof.rs  verify.rs
tests/: action_tests.rs  chain_tests.rs  commitment_tests.rs  memo_tests.rs  vectors.rs  verify_tests.rs
