[package]
name = "zns-verify"
version = "0.0.1"
edition = "2021"
description = "ZcashName (ZNS) hash, action, and memo primitives — used by Registry minters and Resolvers"
publish = false

[features]
# Default is the pure verification kernel: no_std, no orchard, pasta/sinsemilla
# math only — droppable into a wallet, SDK, enclave, or embedded target.
default = []
# `decrypt` adds relaxed Orchard trial decryption (skips the ZIP-212 cmx check)
# for scanning Name Notes. It pulls orchard + the cipher primitives and forces
# std, so it is strictly opt-in — anyone who only needs to *verify* a binding
# never compiles it.
decrypt = [
    "dep:orchard",
    "dep:zcash_note_encryption",
    "dep:zcash_protocol",
    "dep:chacha20",
    "dep:chacha20poly1305",
]
# `proof` adds the wallet-side proof-bundle walk (zns-resolver/PROOFS.md):
# parse a raw transaction + block header, fold the Merkle branch, and verify
# the per-name rcm chain against on-chain commitments. Pulls zcash_primitives
# and forces std; the verification core itself stays in the default kernel.
proof = ["dep:zcash_primitives", "dep:zcash_protocol", "dep:sha2"]
# `address` decodes unified addresses and requires an Orchard receiver (indexer rule).
address = ["dep:zcash_protocol", "dep:zcash_keys"]

[dependencies]
blake2b_simd = { version = "1", default-features = false }
pasta_curves = "0.5"

# For computing the expected Sinsemilla note commitment from the
# caller-supplied (g_d, pk_d, v, ρ, ψ, rcm) — entirely from crates.io,
# no orchard fork required.
sinsemilla = "0.1"
bitvec = { version = "1", default-features = false }
group = "0.13"

# ── `decrypt` (relaxed orchard trial decrypt, optional) ──────────────────────
# Re-implements zcash_note_encryption's inner decrypt to skip the ZIP-212 cmx
# check. The cipher crates are pinned to the same versions zcash_note_encryption
# 0.4 uses internally, so the keystream / AEAD behaviour matches byte-for-byte.
orchard = { version = "0.14", default-features = false, features = ["std"], optional = true }
zcash_note_encryption = { version = "0.4", optional = true }
zcash_protocol = { version = "0.9", default-features = false, features = ["std"], optional = true }
chacha20 = { version = "0.9", default-features = false, optional = true }
chacha20poly1305 = { version = "0.10", default-features = false, optional = true }

# ── `proof` (proof-bundle verification, optional) ────────────────────────────
zcash_primitives = { version = "0.28", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

# ── `address` (unified address decode + Orchard receiver, optional) ───────────
zcash_keys = { version = "0.14", default-features = false, features = ["orchard"], optional = true }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
